fix: column-gap 26px to 27px

--- a/components/ImageCards/image-cards.module.scss
+++ b/components/ImageCards/image-cards.module.scss
@@ -17,7 +17,7 @@ $VIEPORT-WIDTH-WITH-3-PHOTOS:
 .self {
     appearance: none;
     column-count: 1;
-    column-gap: 26px;
+    column-gap: 27px;
     column-fill: balance;
     margin: 0;
     padding: 0;
